@@ -1,4 +1,5 @@
 [SNAPSHOT]
+ * add Proxy support (via config's option) to internal JDKHttpClient (thanks to https://github.com/bjournaud)
 
 [7.0.0]
  * Add Polar API (https://www.polar.com/) (thanks to https://github.com/vidi42)
